--- a/shop/src/component/product/Product.css
+++ b/shop/src/component/product/Product.css
@@ -1,37 +1,11 @@
-.productImg{
-    width: 10vw;
-    height: 15vh;
-}
-li {
-    width: 15vw;
-    height: 25vh;
-    background-color: #f9f9f9;
-    padding: 18px;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  li:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
-  }
-  h2 {
-    font-size: 1rem;
-    color: #333;
-    font-weight: bold;
-  }
-  p {
-    font-size: 1rem;
-    margin-top: 8px;
-    color: #555;
-  }
-  strong {
-    color: #4caf50;
-  }
+
  .list{
+  width:80vw;
+  height: 60vh;
     display: flex;
+    flex-wrap: wrap; 
     flex-direction: row;
+   
     gap : 7px;
  }
  .container{
